feat(java): add JEP-anchored LTS-to-LTS migration reference to the JDK lifecycle skill
Enrich the java-jdk-lifecycle-and-upgrade skill (0.1.0 -> 0.2.0) with a new,
Oracle/OpenJDK-grounded reference that maps each supported LTS-to-LTS corridor:

- references/lts-migration-and-language-features.md — corridors 8->11, 11->17,
  17->21, 21->25. Per corridor: breaking removals and strong-encapsulation
  milestones, deprecated-for-removal APIs (with replacements), and the
  language/API features finalized in that corridor — every row anchored to its
  JEP number with an openjdk.org/jeps/<n> citation and a fail-closed
  "verify at use" header. JDK 25 (GA 2025-09-16, LTS) facts confirmed against
  the official JDK 25 delta; preview/incubating features (Structured
  Concurrency, Stable Values, Primitive Types in Patterns, Vector API) are
  flagged as NOT final so they are never recommended as a safe upgrade payload.
- Keeps support-end/license *dates* out of this file — those stay fail-closed in
  jdk-support-and-license-boundaries.md. This file carries only permanent,
  release-anchored JEP facts.

Wire it into SKILL.md (References list + a HIGH operating rule that requires
JEP-anchoring and forbids asserting a JEP-to-version mapping from memory; trigger
conditions updated to the current corridor set). Cross-routes GC, virtual-thread,
framework-floor, and Oracle-license concerns to their owning agents to stay DRY.

Regenerated catalog/skill-manifest.json and catalog/skills.json for the version
bump; refreshed catalog/asset-integrity.json last. npm run validate, codespell,
and markdownlint all green.